--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <%= render 'shared/header' %>
+    <%= render 'shared/notice' if notice %>
+    <%= render 'shared/alert' if alert %>
     <%= yield %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
